--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ kiwisolver==1.1.0
 MarkupSafe==1.1.1
 matplotlib==3.1.3
 more-itertools==8.2.0
+mpmath==1.1.0
 numpy==1.18.1
 packaging==20.1
 pluggy==0.13.1
@@ -35,6 +36,7 @@ sphinxcontrib-htmlhelp==1.0.2
 sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.2
 sphinxcontrib-serializinghtml==1.1.3
+sympy==1.5.1
 urllib3==1.25.8
 wcwidth==0.1.8
 zipp==2.2.0
