--- a/requirements.txt
+++ b/requirements.txt
@@ -34,6 +34,7 @@ sphinxcontrib-applehelp==1.0.1
 sphinxcontrib-devhelp==1.0.1
 sphinxcontrib-htmlhelp==1.0.2
 sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-mermaid==0.4.0
 sphinxcontrib-qthelp==1.0.2
 sphinxcontrib-serializinghtml==1.1.3
 sympy==1.5.1
