--- a/drone/Makefile
+++ b/drone/Makefile
@@ -8,7 +8,7 @@ TARGET := $(TARGET_NAME)
 SRCEXT := cpp
 
 CXX = g++
-CXXFLAGS += -Wall -std=c++11
+CXXFLAGS += -Wall -std=c++11 -pthread
 
 SRCDIR := ./src
 OBJDIR := ./build
