Add nlohmann json repo as submodule. Change location of submodules.
Change-Id: I64b5bd2cd04fd5ac34a0820f0fddaeef998b790f

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "drone/tgy"]
-	path = drone/tgy
+	path = submodules/tgy
 	url = https://github.com/real-tintin/tgy
+[submodule "drone/json"]
+	path = submodules/json
+	url = https://github.com/real-tintin/json
