Add support for zlib and add gzip submodule. Improve timing of data log queue. Gzip log header.
Change-Id: I6712de9cc2355665b5a8eda50d2b1368f04f4171

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,9 @@
-[submodule "drone/tgy"]
+[submodule "submodules/tgy"]
 	path = submodules/tgy
 	url = https://github.com/real-tintin/tgy
-[submodule "drone/json"]
+[submodule "submodules/json"]
 	path = submodules/json
 	url = https://github.com/real-tintin/json
+[submodule "submodules/gzip"]
+	path = submodules/gzip
+	url = https://github.com/real-tintin/gzip-hpp
