Cross compile ugglan for target (Raspberry Pi), use GCC 9.1 (for consistency to unit test). Fix various issues in i2c and serial conn wrappers.

--- a/drone/Makefile
+++ b/drone/Makefile
@@ -7,8 +7,8 @@
 TARGET := $(TARGET_NAME)
 SRCEXT := cpp
 
-CXX = g++
-CXXFLAGS += -Wall -std=c++17 -pthread
+CXX = g++-9.1
+CXXFLAGS += -Wall -Wno-psabi -std=c++17 -pthread
 LDFLAGS += -lz
 
 SRCDIR := ./src
