Add building of dpkg. Clean up build env for drone source and unit testing.
Change-Id: I1a380c8fa95792bf2dca50ad135fef95e0305492

--- a/drone/Dockerfile_gcc
+++ b/drone/Dockerfile_gcc
@@ -1,5 +1,8 @@
 FROM gcc:9.1
 
+# Copy dependent files (instead of mount to support Windows)
+COPY . /drone
+
 # Create symbolic links ("alias") for GCC 9.1
 RUN cd /bin && ln -s /usr/local/bin/gcc gcc-9.1
 RUN cd /bin && ln -s /usr/local/bin/g++ g++-9.1
