--- a/drone/Makefile_dpkg
+++ b/drone/Makefile_dpkg
@@ -5,8 +5,8 @@
 
 DRONE_SOURCE_PATH = /$(shell pwd)/
 
-.PHONY: run_tests_in_docker
+.PHONY: build_dpkg_in_docker
 
-run_tests_in_docker:
-	docker build . -t raspi
-	docker run -v $(DRONE_SOURCE_PATH):/drone raspi /drone/build_dpkg.sh
+build_dpkg_in_docker:
+	docker build -f Dockerfile_raspi . -t raspi
+	docker run -v $(DRONE_SOURCE_PATH):/drone_mount raspi /drone/build_dpkg.sh
