Pack ugglan executable in dpkg. Move docker cp step to the end to enbale cache of previous steps.
Change-Id: I89ffb46d7768be53d49051d398a2e21d0c0e79e2

--- a/drone/Dockerfile_raspi
+++ b/drone/Dockerfile_raspi
@@ -1,8 +1,5 @@
 FROM raspbian/stretch:latest
 
-# Copy dependent files (instead of mount to support Windows)
-COPY . /drone
-
 # Install dependenies
 RUN apt-get update && apt-get upgrade -y
 RUN apt-get install -y \
@@ -26,3 +23,7 @@ RUN ln -s /usr/include/arm-linux-gnueabihf/asm /usr/include/asm
 RUN ln -s /usr/lib/arm-linux-gnueabihf/crti.o /usr/lib/crti.o
 RUN ln -s /usr/lib/arm-linux-gnueabihf/crt1.o /usr/lib/crt1.o
 RUN ln -s /usr/lib/arm-linux-gnueabihf/crtn.o /usr/lib/crtn.o
+
+# Copy dependent files (instead of mount to support Windows)
+ENV ROOT /drone
+COPY . ${ROOT}
