--- a/drone/Dockerfile_gcc
+++ b/drone/Dockerfile_gcc
@@ -1,8 +1,9 @@
 FROM gcc:9.1
 
-# Copy dependent files (instead of mount to support Windows)
-COPY . /drone
-
 # Create symbolic links ("alias") for GCC 9.1
 RUN cd /bin && ln -s /usr/local/bin/gcc gcc-9.1
 RUN cd /bin && ln -s /usr/local/bin/g++ g++-9.1
+
+# Copy dependent files (instead of mount to support Windows)
+ENV ROOT /drone
+COPY . ${ROOT}
