Setup env for ugglan service. Get and test env in main.

--- a/drone/dpkg/etc/systemd/system/ugglan.service
+++ b/drone/dpkg/etc/systemd/system/ugglan.service
@@ -4,6 +4,8 @@ After=network.target
 
 [Service]
 Type=simple
+Environment="DATA_LOG_ROOT=/usr/local/bin/ugglan/data_logs"
+ExecStartPre=mkdir -p ${DATA_LOG_ROOT}
 ExecStart=./ugglan
 WorkingDirectory=/usr/local/bin/ugglan
 
