--- a/drone/dpkg/etc/systemd/system/ugglan.service
+++ b/drone/dpkg/etc/systemd/system/ugglan.service
@@ -5,6 +5,7 @@ After=network.target
 [Service]
 Type=simple
 Environment="DATA_LOG_ROOT=/usr/local/bin/ugglan/data_logs"
+Environment="LOGGER_LEVEL=DEBUG"
 ExecStartPre=mkdir -p ${DATA_LOG_ROOT}
 ExecStart=./ugglan
 WorkingDirectory=/usr/local/bin/ugglan
