--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ pytest==5.3.5
 python-dateutil==2.8.1
 pytz==2019.3
 requests==2.22.0
+scipy==1.6.0
 six==1.14.0
 snowballstemmer==2.0.0
 Sphinx==2.4.1
