Explicitly list the minimally required dependencies in setup.py. Install the python tool package in test container and rm the need for the requirements.txt.
Change-Id: Icfbef9f09dfc0c9c4dad606fc1ed2e3f09ace9b0

--- a/tools/Dockerfile
+++ b/tools/Dockerfile
@@ -1,9 +1,10 @@
 FROM python:3.7.9
 
-# Setup python env
+# Setup env for testing
 ENV ROOT /tools
 WORKDIR ${ROOT}
-COPY ./requirements.txt ${ROOT}
+COPY . ${ROOT}
 
 RUN pip install --upgrade pip
-RUN pip install -r "requirements.txt" # TODO: Install tools package instead.
+RUN pip install pytest
+RUN pip install .
