--- a/tools/Makefile
+++ b/tools/Makefile
@@ -2,13 +2,8 @@
 # and running unit tests - in docker container.
 #
 
-TOOLS_ROOT = /$(shell pwd)/
-TOOLS_ROOT_MNT = /tools
-
 .PHONY: build_pkg_and_test
 
 build_pkg_and_test:
 	docker build . -t tools
-	docker run -v $(TOOLS_ROOT):$(TOOLS_ROOT_MNT) \
-			tools \
-			python -m pytest
+	docker run tools python -m pytest
