--- a/raspi/Dockerfile_raspi
+++ b/raspi/Dockerfile_raspi
@@ -1,6 +1,6 @@
 FROM raspbian/stretch:latest
 
-# Install dependenies
+# Install dependencies
 RUN apt-get update && apt-get upgrade -y
 RUN apt-get install -y \
     git \
