--- a/doc/requirements.txt
+++ b/doc/requirements.txt
@@ -6,3 +6,4 @@ sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-mermaid==0.6.2
 sphinxcontrib-qthelp==1.0.2
 sphinxcontrib-serializinghtml==1.1.3
+sphinx-autobuild==2021.3.14
