--- a/tools/requirements.txt
+++ b/tools/requirements.txt
@@ -1,36 +1,22 @@
-alabaster==0.7.12
-atomicwrites==1.3.0
-attrs==19.3.0
-Babel==2.8.0
-certifi==2019.11.28
-chardet==3.0.4
-colorama==0.4.3
+atomicwrites==1.4.0
+attrs==21.2.0
+colorama==0.4.4
 cycler==0.10.0
 dataclasses==0.6
-docutils==0.16
-idna==2.8
-imagesize==1.2.0
-importlib-metadata==1.5.0
-Jinja2==2.11.3
-kiwisolver==1.1.0
-MarkupSafe==1.1.1
-matplotlib==3.1.3
-more-itertools==8.2.0
-mpmath==1.1.0
-numpy==1.18.1
-packaging==20.1
+importlib-metadata==4.6.4
+iniconfig==1.1.1
+kiwisolver==1.3.1
+matplotlib==3.4.3
+numpy==1.21.2
+packaging==21.0
+Pillow==8.3.1
 pluggy==0.13.1
 py==1.10.0
-Pygments==2.7.4
-pyparsing==2.4.6
-pytest==5.3.5
-python-dateutil==2.8.1
-pytz==2019.3
-requests==2.22.0
-scipy==1.6.0
-six==1.14.0
-snowballstemmer==2.0.0
-sympy==1.5.1
-urllib3==1.26.5
-wcwidth==0.1.8
-zipp==2.2.0
+pyparsing==2.4.7
+pytest==6.2.4
+python-dateutil==2.8.2
+scipy==1.7.1
+six==1.16.0
+toml==0.10.2
+typing-extensions==3.10.0.0
+zipp==3.5.0
