--- a/raspi/Dockerfile_raspi
+++ b/raspi/Dockerfile_raspi
@@ -7,7 +7,9 @@ RUN apt-get install -y \
     bzip2 \
     libz-dev \
     libi2c-dev \
-    build-essential
+    build-essential \
+    liblapack* \
+    libblas*
 
 # Install pre-complied GCC 9.1 (https://bitbucket.org/sol_prog/raspberry-pi-gcc-binary/src/master/)
 RUN git clone https://bitbucket.org/sol_prog/raspberry-pi-gcc-binary.git
