--- a/raspi/Dockerfile_raspi
+++ b/raspi/Dockerfile_raspi
@@ -25,6 +25,7 @@ RUN ln -s /usr/include/arm-linux-gnueabihf/asm /usr/include/asm
 RUN ln -s /usr/lib/arm-linux-gnueabihf/crti.o /usr/lib/crti.o
 RUN ln -s /usr/lib/arm-linux-gnueabihf/crt1.o /usr/lib/crt1.o
 RUN ln -s /usr/lib/arm-linux-gnueabihf/crtn.o /usr/lib/crtn.o
+RUN ln -s /usr/lib/arm-linux-gnueabihf/gcrt1.o /usr/lib/gcrt1.o
 
 # Copy dependent files (instead of mount to support Windows)
 ENV ROOT /raspi
