Add optimization flag O3 and use Eigens noalias to improve matrix performance.
Change-Id: Id9c43dbff258504f3adda7821d0744fb7d7d5c4c

--- a/raspi/Makefile
+++ b/raspi/Makefile
@@ -9,7 +9,7 @@ TARGET := $(TARGET_NAME)
 SRCEXT := cpp
 
 CXX = g++-9.1
-CXXFLAGS += -Wall -Wno-psabi -std=c++17 -pthread $(EXTRA_CXXFLAGS)
+CXXFLAGS += -Wall -Wno-psabi -std=c++17 -pthread -O3 $(EXTRA_CXXFLAGS)
 LDFLAGS += -lz
 
 SRCDIR := ./src
