--- a/tools/requirements.txt
+++ b/tools/requirements.txt
@@ -7,16 +7,20 @@ importlib-metadata==4.6.4
 iniconfig==1.1.1
 kiwisolver==1.3.1
 matplotlib==3.4.3
+mpmath==1.2.1
 numpy==1.21.2
 packaging==21.0
+pandas==1.3.3
 Pillow==8.3.2
 pluggy==0.13.1
 py==1.10.0
 pyparsing==2.4.7
 pytest==6.2.4
 python-dateutil==2.8.2
+pytz==2021.1
 scipy==1.7.1
 six==1.16.0
+sympy==1.8
 toml==0.10.2
 typing-extensions==3.10.0.0
 zipp==3.5.0
