--- a/raspi/Dockerfile_raspi
+++ b/raspi/Dockerfile_raspi
@@ -1,7 +1,7 @@
 FROM raspbian/stretch:latest
 
 # Install dependencies
-RUN apt-get update && apt-get upgrade -y
+RUN apt-get --fix-missing update && apt-get upgrade -y
 RUN apt-get install -y \
     git \
     bzip2 \
