--- a/raspi/Makefile_dpkg
+++ b/raspi/Makefile_dpkg
@@ -5,20 +5,22 @@
 RASPI_ROOT = /$(shell pwd)/
 RASPI_ROOT_MOUNTED = /raspi_mount
 
+IMAGE_NAME = raspi_target
+
 .DEFAULT_GOAL := build_dpkg
 
 .PHONY: build_image build_dpkg build_dpkg_for_profiling
 
 build_image:
 	docker buildx build --platform linux/arm/v7 \
-						-f Dockerfile . -t raspi
+						-f Dockerfile . -t ${IMAGE_NAME}
 
 build_dpkg: build_image
 	docker run -v $(RASPI_ROOT):${RASPI_ROOT_MOUNTED} \
 	           -e ROOT_MOUNTED=${RASPI_ROOT_MOUNTED} \
-			    raspi /raspi/build_dpkg.sh
+			    ${IMAGE_NAME} /raspi/build_dpkg.sh
 
 build_dpkg_for_profiling: build_image
 	docker run -v $(RASPI_ROOT):${RASPI_ROOT_MOUNTED} \
 	           -e ROOT_MOUNTED=${RASPI_ROOT_MOUNTED} \
-			    raspi /raspi/build_dpkg.sh -c -pg
+			    ${IMAGE_NAME} /raspi/build_dpkg.sh -c -pg
