--- a/tools/requirements.txt
+++ b/tools/requirements.txt
@@ -3,10 +3,11 @@ attrs==21.2.0
 colorama==0.4.4
 cycler==0.10.0
 dataclasses==0.6
+fonttools==4.28.1
 importlib-metadata==4.6.4
 iniconfig==1.1.1
 kiwisolver==1.3.1
-matplotlib==3.4.3
+matplotlib==3.5.0
 mpmath==1.2.1
 numpy==1.21.2
 packaging==21.0
@@ -19,8 +20,10 @@ pytest==6.2.4
 python-dateutil==2.8.2
 pytz==2021.1
 scipy==1.7.1
+setuptools-scm==6.3.2
 six==1.16.0
 sympy==1.8
 toml==0.10.2
+tomli==1.2.2
 typing-extensions==3.10.0.0
 zipp==3.5.0
