--- a/tools/requirements.txt
+++ b/tools/requirements.txt
@@ -15,7 +15,12 @@ pandas==1.3.3
 Pillow==8.3.2
 pluggy==0.13.1
 py==1.10.0
+PyOpenGL==3.1.5
 pyparsing==2.4.7
+PyQt5==5.15.6
+PyQt5-Qt5==5.15.2
+PyQt5-sip==12.9.0
+pyqtgraph==0.12.3
 pytest==6.2.4
 python-dateutil==2.8.2
 pytz==2021.1
