--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -7,8 +7,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - uses: satackey/action-docker-layer-caching@v0.0.11
-        continue-on-error: true
+      #- uses: satackey/action-docker-layer-caching@v0.0.11
+      #  continue-on-error: true
 
       - name: Build doc
         run: make -C ./doc
