Fix issue with missing opengl lib in docker.

--- a/tools/Dockerfile
+++ b/tools/Dockerfile
@@ -1,6 +1,9 @@
 FROM python:3.7.9
 
 # Setup env for testing
+RUN apt-get update
+RUN apt-get install ffmpeg libsm6 libxext6 -y
+
 RUN pip install --upgrade pip
 RUN pip install pytest
 
