--- a/tools/requirements.txt
+++ b/tools/requirements.txt
@@ -6,6 +6,7 @@ dataclasses==0.6
 fonttools==4.28.1
 importlib-metadata==4.6.4
 iniconfig==1.1.1
+inputs==0.5
 kiwisolver==1.3.1
 matplotlib==3.5.0
 mpmath==1.2.1
