--- a/tools/requirements.txt
+++ b/tools/requirements.txt
@@ -3,10 +3,12 @@ attrs==21.2.0
 colorama==0.4.4
 cycler==0.10.0
 dataclasses==0.6
+fonttools==4.28.1
 importlib-metadata==4.6.4
 iniconfig==1.1.1
+inputs==0.5
 kiwisolver==1.3.1
-matplotlib==3.4.3
+matplotlib==3.5.0
 mpmath==1.2.1
 numpy==1.21.2
 packaging==21.0
@@ -14,13 +16,20 @@ pandas==1.3.3
 Pillow==8.3.2
 pluggy==0.13.1
 py==1.10.0
+PyOpenGL==3.1.5
 pyparsing==2.4.7
+PyQt5==5.15.6
+PyQt5-Qt5==5.15.2
+PyQt5-sip==12.9.0
+pyqtgraph==0.12.3
 pytest==6.2.4
 python-dateutil==2.8.2
 pytz==2021.1
 scipy==1.7.1
+setuptools-scm==6.3.2
 six==1.16.0
 sympy==1.8
 toml==0.10.2
+tomli==1.2.2
 typing-extensions==3.10.0.0
 zipp==3.5.0
