--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -10,14 +10,22 @@ jobs:
         name: Checkout
         uses: actions/checkout@v2
       -
-        name: Set up docker buildx
+        name: Setup docker buildx
         uses: docker/setup-buildx-action@v1
       -
-        name: Build doc
+        name: Setup qemu
+        uses: docker/setup-qemu-action@v1
+        with:
+          platforms: linux/arm/v7
+      -
+        name: Build documentation
         run: make -C ./doc
       -
-        name: Build & unit test tools
+        name: Install tools & unit test
         run: make -C ./tools
       -
-        name: Build & unit test raspi
+        name: Compile (host) raspi & unit test
         run: make -C ./raspi -f Makefile_tests
+      -
+        name: Compile (target) raspi & build dpkg
+        run: make -C ./raspi -f Makefile_dpkg
