--- a/raspi/Makefile_dpkg
+++ b/raspi/Makefile_dpkg
@@ -12,8 +12,8 @@ IMAGE_NAME = raspi_target
 .PHONY: build_image build_dpkg build_dpkg_for_profiling
 
 build_image:
-	docker buildx build --platform linux/arm/v7 \
-						-f Dockerfile . -t ${IMAGE_NAME}
+	docker build --platform linux/arm/v7 \
+				 -f Dockerfile . -t ${IMAGE_NAME}
 
 build_dpkg: build_image
 	docker run -v $(RASPI_ROOT):${RASPI_ROOT_MOUNTED} \
