--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -21,9 +21,9 @@ jobs:
       -
         name: Setup docker buildx
         uses: docker/setup-buildx-action@v1
-        with:
-          cache-from: type=gha, scope=${{ github.workflow }}
-          cache-to: type=gha, scope=${{ github.workflow }}
+      -
+        name: Docker layer caching
+        uses: satackey/action-docker-layer-caching@v0.0.11
       -
         name: Setup qemu
         uses: docker/setup-qemu-action@v1
