Improve local build speed of C++ app.
* By generating dependencies.
* Mounting into container.

--- a/raspi/Dockerfile
+++ b/raspi/Dockerfile
@@ -1,10 +1,8 @@
 FROM debian:bullseye
 
-# Install dependencies
+ARG IMAGE_ROOT
+ENV ROOT ${IMAGE_ROOT}
+WORKDIR ${ROOT}
+
 RUN apt-get update && apt-get upgrade -y
 RUN apt-get install -y libz-dev libi2c-dev build-essential
-
-# Copy dependent files (instead of mount to support Windows)
-ENV ROOT /raspi
-WORKDIR ${ROOT}
-COPY . ${ROOT}
