--- a/raspi/Makefile_dpkg
+++ b/raspi/Makefile_dpkg
@@ -6,6 +6,9 @@
 RASPI_ROOT = $(shell pwd)
 IMAGE_ROOT = /raspi
 
+UID = $(shell id -u)
+GID = $(shell id -u)
+
 IMAGE_NAME = raspi_target
 
 .DEFAULT_GOAL := build_dpkg
@@ -19,8 +22,10 @@ build_image:
 
 build_dpkg: build_image
 	docker run -v $(RASPI_ROOT):${IMAGE_ROOT} \
+		--user $(UID):$(GID) \
 		${IMAGE_NAME} ./build_dpkg.sh
 
 build_dpkg_for_profiling: build_image
 	docker run -v $(RASPI_ROOT):${IMAGE_ROOT} \
+		--user $(UID):$(GID) \
 		${IMAGE_NAME} ./build_dpkg.sh -c -pg
