Implement a wireless streaming service on ugglan.
The c++ server is fully implemented and a basic python client
exists. Also made a lot of refactoring. A selection of it follows.

- Add header guards to gzip lib and throw error if empty input
- Rename c++ utils to common_utils to avoid name clashing
- Refactor data log e.g., move logic to data_log_utils
- Make use of size_t where applicable
- Throw c++ style runtime error in base64 lib, rm new line by default

--- a/raspi/Makefile
+++ b/raspi/Makefile
@@ -14,7 +14,7 @@ SRCEXT := cpp
 
 CXX = g++-10
 CXXFLAGS += -Wall -Wno-psabi -std=c++17 -pthread -MD $(EXTRA_CXXFLAGS)
-LDFLAGS += -lz -li2c
+LDFLAGS += -lz -li2c -lzmq
 
 SRCDIR := ./src
 OBJDIR := ./build_$(BUILD_SUFFIX)
