--- a/raspi/Dockerfile
+++ b/raspi/Dockerfile
@@ -5,4 +5,4 @@ ENV ROOT ${IMAGE_ROOT}
 WORKDIR ${ROOT}
 
 RUN apt-get update && apt-get upgrade -y
-RUN apt-get install -y libz-dev libi2c-dev build-essential
+RUN apt-get install -y libz-dev libi2c-dev build-essential libzmq3-dev
