--- a/tools/setup.cfg
+++ b/tools/setup.cfg
@@ -17,6 +17,8 @@ install_requires =
     inputs
     sympy
     zmq
+    plotly
+    dash
 
 [options.entry_points]
 console_scripts =
@@ -30,6 +32,7 @@ console_scripts =
     gui-linear-sim = ugglan_tools.linear_sim.gui:main
     gui-6dof-sim = ugglan_tools.non_linear_sim.gui:main
     gui-filter-design = ugglan_tools.filter_design.gui:main
+    gui-streamer = ugglan_tools.streamer.gui:main
 
 [options.extras_require]
 test = pytest
