--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -15,9 +15,18 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Maximize build space
+        uses: easimon/maximize-build-space@master
+        with:
+          remove-android: 'true'
+          remove-dotnet: 'true'
+          remove-haskell: 'true'
       -
         name: Checkout
         uses: actions/checkout@v2
+      -
+        name: Setup docker layer caching
+        uses: satackey/action-docker-layer-caching@v0.0.11
       -
         name: Setup docker buildx
         uses: docker/setup-buildx-action@v1
