Estimate accelerometer static errors and compensate. Refactor target c++ attitude estimation.
Also:
    - Update doc.
    - Rename offset -> bias w.r.t IMU error compensation.
    - Add namespace string for closing namespaces.

--- a/tools/setup.cfg
+++ b/tools/setup.cfg
@@ -25,10 +25,11 @@ console_scripts =
     plot-data-log = ugglan_tools.data_log.plot:main
     plot-multi-body = ugglan_tools.multi_body_sim.plot_drone:main
     plot-att-est = ugglan_tools.attitude_est.plot:main
-    plot-hard-iron-offset = ugglan_tools.misc_scripts.hard_iron_offset:main
+    plot-hard-iron-bias = ugglan_tools.misc_scripts.hard_iron_bias:main
     plot-motor-dynamics = ugglan_tools.misc_scripts.motor_dynamics:main
     plot-motor-thrust = ugglan_tools.misc_scripts.motor_thrust:main
     plot-motor-vibrations = ugglan_tools.misc_scripts.motor_vibrations:main
+    est-acc-static-errors = ugglan_tools.misc_scripts.acc_static_errors:main
     gui-linear-sim = ugglan_tools.linear_sim.gui:main
     gui-6dof-sim = ugglan_tools.non_linear_sim.gui:main
     gui-filter-design = ugglan_tools.filter_design.gui:main
