Fix usage of group id during docker run.

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -6,7 +6,7 @@ DOC_ROOT = /$(shell pwd)/
 IMAGE_ROOT = /doc
 
 UID = $(shell id -u)
-GID = $(shell id -u)
+GID = $(shell id -g)
 
 SPHINXOPTS ?=
 SOURCEDIR   = source/
